Enable powerwash shortcut in views-based login screen.

Bug: 837501
Cq-Include-Trybots: luci.chromium.try:closure_compilation
Change-Id: Ia55c5e302d70c1a65409fd7268ae135e0ee7c5ca
Reviewed-on: https://chromium-review.googlesource.com/1102904
Commit-Queue: Quan Nguyen <qnnguyen@chromium.org>
Reviewed-by: Jacob Dufault <jdufault@chromium.org>
Reviewed-by: Xiyuan Xia <xiyuan@chromium.org>
Reviewed-by: Daniel Cheng <dcheng@chromium.org>
Cr-Commit-Position: refs/heads/master@{#569043}
Former-commit-id: 8db5d9a35658678b77e3af4cb9e72788bc6191b4