chrome/browser/chromeos/login/screens/user_selection_screen.cc
@@ -360,6 +360,10 @@ void UserSelectionScreen::InitEasyUnlock() {
   proximity_auth::ScreenlockBridge::Get()->SetLockHandler(this);
 }
 
+bool UserSelectionScreen::HasAnyUsers() const {
+  return !users_.empty();
+}
+
 // static
 void UserSelectionScreen::FillUserDictionary(
     user_manager::User* user,
